# ed25519-consensus

./: Cargo.toml  README.md
src/: batch.rs  lib.rs  signing_key.rs  verification_key.rs
tests/: small_order.rs
