[package]
name = "ed25519-consensus"
# Before publishing:
# - update CHANGELOG.md
# - update html_root_url
version = "2.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/penumbra-zone/ed25519-consensus"
description = "Ed25519 suitable for use in consensus-critical contexts."
resolver = "2"

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1", optional = true, features = ["derive"] }
zeroize = { version = "1.1", default-features = false }
thiserror = { version = "1", optional = true }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
curve25519-dalek = { git="https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.0-risczero.1", default-features = false, features = ["alloc", "zeroize", "digest", "precomputed-tables", "legacy_compatibility"] }



[dev-dependencies]
rand = "0.8"
bincode = "1"
criterion = "0.3"
ed25519-zebra-legacy = { package = "ed25519-zebra", version = "1" }
color-eyre = "0.5"
once_cell = "1.4"

[features]
std = ["thiserror"]
default = ["serde", "std"]

[[test]]
name = "rfc8032"

[[test]]
name = "unit_tests"

[[test]]
name = "batch"

[[bench]]
name = "bench"
harness = false
